--- a/package.json
+++ b/package.json
@@ -1,24 +1,23 @@
 {
   "name": "skymdev.fr",
-  "version": "0.1.0",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "@portabletext/react": "^3.2.1",
-    "@sanity/image-url": "^1.1.0",
-    "@sanity/vision": "^3.90.0",
-    "@vercel/analytics": "^1.5.0",
-    "next": "15.3.8",
-    "next-sanity": "^9.12.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "sanity": "^3.90.0",
-    "styled-components": "^6.1.18"
+    "@portabletext/react": "^6.0.0",
+    "@sanity/image-url": "^1.2.0",
+    "@sanity/vision": "^4.21.0",
+    "jsdom": "^27.3.0",
+    "next": "16.0.10",
+    "next-sanity": "^11.6.10",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "sanity": "^4.21.0",
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@types/node": "^20",
